Add texts in Italian

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -3,6 +3,6 @@
     "message": "Clean on Click"
   },
   "extension_description": {
-    "message": "Control + clic para limpiar cualquier campo de entrada"
+    "message": "Control + clic per svuotare qualsiasi campo di testo."
   }
 }
