--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,6 +3,6 @@
     "message": "Clean on Click"
   },
   "extension_description": {
-    "message": "Control + click to clear text from any field"
+    "message": "Control + click to clear any text field"
   }
 }
