--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -3,6 +3,6 @@
     "message": "Clean on Click"
   },
   "extension_description": {
-    "message": "Contrôle + clic pour effacer le texte de n'importe quel champ"
+    "message": "Contrôle + clic pour effacer n'importe quel champ de texte"
   }
 }
