--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -3,6 +3,6 @@
     "message": "Clean on Click"
   },
   "extension_description": {
-    "message": "Controle + clique para limpar o texto de qualquer campo"
+    "message": "Control + clique para limpar qualquer campo de texto"
   }
 }
