--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -3,6 +3,6 @@
     "message": "Clean on Click"
   },
   "extension_description": {
-    "message": "Control + click to clear text from any input field"
+    "message": "Control + click per svuotare qualsiasi campo di testo"
   }  
 }
