Add link to my other extensions

--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -4,5 +4,8 @@
   },
   "extension_description": {
     "message": "Contrôle + clic pour effacer n'importe quel champ de texte"
+  },
+  "context_menu_my_other_extensions": {
+    "message": "Mes autres extensions"
   }
 }
