--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,5 +4,8 @@
   },
   "extension_description": {
     "message": "Control + click to clear any text field"
+  },
+  "context_menu_my_other_extensions": {
+    "message": "My other extensions"
   }
 }
