--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -4,5 +4,8 @@
   },
   "extension_description": {
     "message": "Control + clic para vaciar cualquier campo de texto."
+  },
+  "context_menu_my_other_extensions": {
+    "message": "Mis otras extensiones"
   }
 }
