--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -4,5 +4,8 @@
   },
   "extension_description": {
     "message": "Control + click per svuotare qualsiasi campo di testo"
-  }  
+  },
+  "context_menu_my_other_extensions": {
+    "message": "Altre estensioni mie"
+  }
 }
