--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -4,5 +4,8 @@
   },
   "extension_description": {
     "message": "Control + clique para limpar qualquer campo de texto"
+  },
+  "context_menu_my_other_extensions": {
+    "message": "Minhas outras extensões"
   }
 }
