--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -6,6 +6,6 @@
     "message": "Control + click to clear any text field"
   },
   "context_menu_my_other_extensions": {
-    "message": "My other extensions"
+    "message": "★★ My other extensions ★★"
   }
 }
