--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -6,6 +6,6 @@
     "message": "Control + clic para vaciar cualquier campo de texto."
   },
   "context_menu_my_other_extensions": {
-    "message": "Mis otras extensiones"
+    "message": "★★ Mis otras extensiones ★★"
   }
 }
