--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -6,6 +6,6 @@
     "message": "Contrôle + clic pour effacer n'importe quel champ de texte"
   },
   "context_menu_my_other_extensions": {
-    "message": "Mes autres extensions"
+    "message": "★★ Mes autres extensions ★★"
   }
 }
