--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -6,6 +6,6 @@
     "message": "Control + click per svuotare qualsiasi campo di testo"
   },
   "context_menu_my_other_extensions": {
-    "message": "Altre estensioni mie"
+    "message": "★★ Altre estensioni mie ★★"
   }
 }
