--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -6,6 +6,6 @@
     "message": "Control + clique para limpar qualquer campo de texto"
   },
   "context_menu_my_other_extensions": {
-    "message": "Minhas outras extensões"
+    "message": "★★ Minhas outras extensões ★★"
   }
 }
